<resources>
    <string name="app_name">Doveaz</string>
    <string name="partner">Partner</string>
    <string name="delivery">Delivery</string>
    <string name="takeatour">Take a tour</string>
    <string name="menu">How can we help you?</string>
    <string name="buy_deliver">Buy &amp; Deliver</string>
    <string name="collection">Collection</string>
    <string name="send">Send</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="hi">Hi!</string>
    <string name="passcode">Passcode</string>
    <string name="enter_number">Enter Mobile Number</string>
    <string name="next">Next</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="present_addr">Present Address</string>
    <string name="email">Email</string>
    <string name="street_addr">Street Address</string>
    <string name="postal">Postal Code</string>
    <string name="idproof">Passport/Driving Licence/ID</string>
    <string name="done">Done</string>
    <string name="item_shortdesc">Description</string>
    <string name="item_brief">Item Brief Description</string>
    <string name="upload_pic">Upload Picture</string>
    <string name="wheretobuy">Where to buy</string>
    <string name="local">Local</string>
    <string name="domestic">Domestic</string>
    <string name="international">International</string>
    <string name="deliveryaddr"> Delivery Address</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="street">street</string>
    <string name="pickacate">Pick a category</string>
    <string name="gender">Gender</string>
    <string name="university">University</string>
    <string name="employer">Profession</string>
    <string name="nationality">Nationality</string>
    <string name="area">Area</string>
    <string name="typeofpackage">Type of package</string>
    <string name="document">Document</string>
    <string name="valueofitem">Value of the item</string>
    <string name="quantity">Quantity</string>
    <string name="iknowvalue">I know the value</string>
    <string name="requestvalue">Request for value</string>
    <string name="tipforservice">Tip for the service</string>
    <string name="date">Delivery Date</string>
    <string name="credits">Credits required for the service: </string>
    <string name="home">Home</string>
    <string name="account_settings">Account settings</string>
    <string name="change_pass">Change password</string>
    <string name="logout">Logout</string>
    <string name="collectionaddr">Collection Address</string>
    <string name="belowpartners">Below partners are ready to buy &amp; deliver your items</string>
    <string name="friends">Friends</string>
    <string name="mutualfriends">Mutual Friends</string>
    <string name="verified_persons">Verified unknown persons</string>
    <string name="unknown_persons">Unknown persons</string>
    <string name="distancefrom">Distance From</string>
    <string name="travelling_on">Traveling on</string>
    <string name="view_profile">View Profile</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="credit">Credits</string>
    <string name="risk">Risk</string>
    <string name="dist_from_pickup">Distance from pick up address</string>
    <string name="dist_from_deliver_addr">Distance from delivery address</string>
    <string name="miles">Miles</string>
    <string name="engage">Engage</string>
    <string name="partner_details">Travel Details</string>
    <string name="one_way">One way</string>
    <string name="two_way">Return</string>
    <string name="your_res_addr">Your residential address (Hotel/Residential/Office)</string>
    <string name="my_min_tip">My minimum tip</string>
    <string name="select_type">Select the type of service you offer</string>
    <string name="both">Both</string>
    <string name="item">Item:</string>
    <string name="item_desc">Item Description</string>
    <string name="click_toimg">Click to view the picture of item</string>
    <string name="tip_offered">Tip offered</string>
    <string name="do_you_accept">Do you accept</string>
    <string name="negotiate">Negotiate</string>
    <string name="congrats">Congratulations!</string>
    <string name="cong">Jack transfered 240 credits to your account. Unlock your credits by completing your milestones listed below.</string>
    <string name="mile1">Milestone I</string>
    <string name="mile2">Milestone II</string>
    <string name="mile3">Milestone III</string>
    <string name="transfer">Transfer</string>
    <string name="status">Status</string>
    <string name="upload">Upload</string>
    <string name="final_delivery">Final Delivery</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="send_newpassword">Send Password to mail</string>
    <string name="education">Education</string>
    <string name="dob">Date of Birth</string>
    <string name="cc">Please enter Country Code (CC) Without \'+\' Sign followed by your Mobile Number</string>
    <string name="subscribed_mob">Please Enter your Doveaz subscribed Mobile number</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="reset">Reset</string>
    <string name="reset_pass">Reset Password</string>
    <string name="confirm">Confirm</string>
    <string name="upload_image">Upload the item image here*</string>
    <string name="upload_bill">Upload item Bill/Invoice here*</string>
    <string name="where_travelling">Where you travelling?</string>
    <string name="destination_address">Destination Address</string>
    <string name="all">All</string>
    <string name="verified_users">Verified users</string>
    <string name="contacts">My Contacts</string>
    <string name="first_connection">Mutual Contacts</string>
    <string name="unknown">Other contacts</string>
    <string name="not_verified_users">Not verified users</string>
    <string name="pickup_address"> Pickup Address</string>
    <string name="item_details">Item Details</string>
    <string name="package_details">Package Details</string>
    <string name="date_format">YYYY/MM/DD</string>
    <string name="item_value">Item Value</string>
    <string name="pay">How much you pay for the Service?</string>
    <string name="fee">Fee</string>
    <string name="date_travelon">Travel Date (YYYY/MM/DD)</string>
    <string name="date_return">Return Date (YYYY/MM/DD)</string>
    <string name="minimum_tip">Minimum Tip</string>
    <string name="offer">What you can offer?</string>
    <string name="total_credits">Total credits needed to proceed</string>
    <string name="basic_info">Basic Information</string>
    <string name="dob_reg">Date of Birth (YYYY-MM-DD)</string>
    <string name="uploads_terms">Identity information</string>
    <string name="upload_id">Upload your ID proof1*</string>
    <string name="upload_id2">Upload your ID proof2*</string>
    <string name="risk_score">Risk Score</string>
    <string name="profession">Profession</string>
    <string name="decline">Decline</string>
    <string name="item_img">Item Image</string>
    <string name="edit">Edit</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="credit_offered">Credits offered</string>
    <string name="partner_header">Below users are ready to pay for your service</string>
    <string name="delivery_header">Below agents are available for your delivery</string>
    <string name="notifications">Notifications</string>
    <string name="declined">Declined</string>
    <string name="sent">Sent</string>
    <string name="response">Response</string>
    <string name="accepted">Accepted</string>
    <string name="engagements">Engagements</string>
    <string name="negotiations">Negotiations</string>
    <string name="category">Category</string>
    <string name="accept">Accept</string>
    <string name="view">View</string>
    <string name="electronics">Electronics</string>
    <string name="groceries">Groceries</string>
    <string name="food">Food</string>
    <string name="furniture">Furniture</string>
    <string name="footwear">Footwear</string>
    <string name="apparels">Apparels</string>
    <string name="alcohol">Spirits/Alcohol</string>
    <string name="books">Books</string>
    <string name="sports">Sport Equipments</string>
    <string name="medicines">Medicines</string>
    <string name="beauty"><![CDATA[Beauty & Health]]></string>
    <string name="autoparts">Auto Parts</string>
    <string name="watches">Watches</string>
    <string name="toys">Toys</string>
    <string name="others">Others</string>
    <string name="view_original">View Original</string>
    <string name="couriers">Couriers</string>
    <string name="buy_desc">Tell us What you need. We will buy and deliver it to you</string>
    <string name="collection_desc">Food,Fashion,Furniture...You mean it. We will collect it</string>
    <string name="send_desc">Sending parcels is that easy</string>
    <string name="update_travel">Update Travel</string>
    <string name="view_service">View Services</string>
    <string name="risk_txt">Risk</string>
    <string name="transfer_credit">Transfer Credit</string>
    <string name="tot_credits">Total Credits</string>
    <string name="go_to_milestone">Goto Milestone</string>
    <string name="help">Help</string>
    <string name="rate_user">Rate the user</string>
    <string name="finish">Finish</string>
    <string name="couriers_services">Courier Services</string>
    <string name="cancel">Cancel</string>
    <string name="purchase_credit">Purchase Credits</string>
    <string name="credits_total">Total credits needed for this service</string>
    <string name="credits_have">Your current credit Balance</string>
    <string name="credit_buy">Credits you need to buy for this service</string>
    <string name="check_status">Check Status</string>
    <string name="item_delivered">Item Delivered?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update">Update</string>
    <string name="ok">Ok</string>
    <string name="right">Accept</string>
    <string name="go_onduty">Go On-Duty</string>
    <string name="local_details">Local Travel Details</string>
    <string name="travel_date">Travel Date</string>
    <string name="your_current_address">Your current address</string>
    <string name="pending_milestone">Pending Milestones</string>
    <string name="view_item_image">View Item Image</string>
    <string name="view_bill_invoice">View Invoice/Bill</string>
    <string name="view_orders">View orders</string>
    <string name="refresh">Refresh</string>
    <string name="goto_rating">Rating</string>
    <string name="my_wallet">My Wallet</string>
    <string name="available_credits">Available credits</string>
    <string name="international_delivery">International Delivery</string>
    <string name="update_plan">[Update your international travel plan]</string>
    <string name="domestic_delivery">Domestic Delivery</string>
    <string name="ondemand_domestic">[For on-demand Domestic jobs]</string>
    <string name="local_delivery">On Demand Local Delivery</string>
    <string name="go_onduty_btn">[Click to Go - On Duty]</string>
    <string name="sent_request">Sent Request</string>
    <string name="declined_request">Declined Request</string>
    <string name="received_response">Received Response</string>
    <string name="negotiation_response">Negotiated Response</string>
    <string name="accept_response">Accepted Jobs</string>
    <string name="withdraw">Withdraw</string>
    <string name="connect">DConnect</string>
    <string name="networks">DNetwork</string>
</resources>