<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbackround"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/ten_dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/twenty_dp"
        android:paddingRight="@dimen/twenty_dp">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/doveaz_blue" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/two_dp"
            android:layout_marginTop="@dimen/two_dp"
            android:gravity="center"
            android:text="@string/local_details"
            android:textColor="@color/doveaz_blue"
            android:textSize="@dimen/twenty_dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/doveaz_blue" />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/ten_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/travel_date"
                android:textColor="@color/doveaz_blue" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/form_bg"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnpartner_travelon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/form_bg"
                    android:drawableRight="@drawable/calendar_icon"
                    android:gravity="center"
                    android:text="@string/date_travelon"
                    android:textAllCaps="false"
                    android:textColor="@color/doveaz_blue" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@string/your_current_address"
                android:textColor="@color/doveaz_blue" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/form_bg"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/five_dp"
                    android:text="@string/destination_address" />

                <TextView
                    android:id="@+id/text_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/five_dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/five_dp"
                    android:text="@string/city" />

                <TextView
                    android:id="@+id/text_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/five_dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/five_dp"
                    android:text="@string/state" />

                <TextView
                    android:id="@+id/text_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/five_dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/five_dp"
                    android:text="@string/country" />

                <TextView
                    android:id="@+id/text_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/five_dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/five_dp"
                    android:text="@string/postal" />

                <TextView
                    android:id="@+id/text_postal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/five_dp"
                    android:text="" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/minimum_tip"
                android:textColor="@color/doveaz_blue" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/form_bg"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_minimum_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/edit_minimum_tip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/my_min_tip"
                        android:inputType="number"
                        android:textColor="@color/doveaz_blue"
                        android:textColorHint="@color/doveaz_blue" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/offer"
                android:textColor="@color/doveaz_blue" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/form_bg"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="@dimen/five_dp"
                    android:text="@string/select_type" />

                <RadioGroup
                    android:id="@+id/radiochoose_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/five_dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_partnerbuydel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy_deliver" />

                    <RadioButton
                        android:id="@+id/radio_partnercollection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/collection" />

                    <RadioButton
                        android:id="@+id/radio_partnersend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send" />

                    <RadioButton
                        android:id="@+id/radio_partnerall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all" />

                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/partnerbutton_ok"
                android:layout_width="@dimen/one_fifty_dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ten_dp"
                android:layout_marginTop="@dimen/twenty_dp"
                android:background="@color/doveaz_orange"
                android:text="@string/next"
                android:textColor="@color/appbackround" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>