<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbackround"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/twenty_dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.doveazapp.Utils.UserAvatar
                android:id="@+id/img_check_frnd"
                android:layout_width="@dimen/hundred_dp"
                android:layout_height="@dimen/hundred_dp"
                android:layout_gravity="center"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/txt_check_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/ten_dp"
                android:text="@string/full_name"
                android:textSize="@dimen/fifteen_dp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/hundred_dp"
            android:layout_gravity="center"
            android:src="@drawable/vertical_line" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/risk_score" />

            <ProgressBar
                android:id="@+id/progress_checkrisk"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/hundred_dp"
                android:layout_height="@dimen/hundred_dp"
                android:layout_gravity="center"
                android:indeterminate="false"
                android:max="100"
                android:progressDrawable="@drawable/circular_progress_bar" />

            <TextView
                android:id="@+id/prog_risk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/risk" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/twenty_dp"
        android:layout_marginRight="@dimen/twenty_dp"
        android:background="@color/doveaz_blue" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/dob"
                android:textColor="@color/doveaz_blue" />

            <TextView
                android:id="@+id/txt_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/doveaz_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/gender"
                android:textColor="@color/doveaz_blue" />

            <TextView
                android:id="@+id/txt_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/doveaz_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/education"
                android:textColor="@color/doveaz_blue" />

            <TextView
                android:id="@+id/txt_edu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/doveaz_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/profession"
                android:textColor="@color/doveaz_blue" />

            <TextView
                android:id="@+id/txt_profession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/doveaz_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/mobile_no"
                android:textColor="@color/doveaz_blue" />

            <TextView
                android:id="@+id/txt_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/doveaz_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/nationality"
                android:textColor="@color/doveaz_blue" />

            <TextView
                android:id="@+id/txt_nationality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/doveaz_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/street_addr"
                android:textColor="@color/doveaz_blue" />

            <TextView
                android:id="@+id/txt_street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/doveaz_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/city"
                android:textColor="@color/doveaz_blue" />

            <TextView
                android:id="@+id/txt_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/doveaz_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/postal"
                android:textColor="@color/doveaz_blue" />

            <TextView
                android:id="@+id/txt_postal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/doveaz_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:text="@string/country"
                android:textColor="@color/doveaz_blue" />

            <TextView
                android:id="@+id/txt_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/ten_dp"
                android:textColor="@color/doveaz_orange" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>